--- a/sites/homePage.html
+++ b/sites/homePage.html
@@ -17,7 +17,6 @@
     <link rel="stylesheet" href="/style/css/style.css" />
   </head>
   <body>
-    <!-- Alert Container -->
     <div
       class="alert alert-danger alert-dismissible fade show"
       role="alert"
@@ -35,7 +34,6 @@
       ></button>
     </div>
 
-    <!-- Traffic Light Container -->
     <div class="traffic-light">
       <button
         type="button"
@@ -44,9 +42,7 @@
         onmouseover="hoverLight('red')"
         onmouseout="resetLight()"
         onclick="clickLight('red')"
-      >
-        <!-- Text will appear here during the countdown -->
-      </button>
+      ></button>
       <button
         type="button"
         class="rounded-circle btn light-btn"
@@ -54,9 +50,7 @@
         onmouseover="hoverLight('orange')"
         onmouseout="resetLight()"
         onclick="clickLight('orange')"
-      >
-        <!-- Text will appear here during the countdown -->
-      </button>
+      ></button>
       <button
         type="button"
         class="rounded-circle btn light-btn"
@@ -64,12 +58,9 @@
         onmouseover="hoverLight('green')"
         onmouseout="resetLight()"
         onclick="clickLight('green')"
-      >
-        <!-- Text will appear here during the countdown -->
-      </button>
+      ></button>
     </div>
 
-    <!-- Bootstrap 5 JavaScript (needed for alert dismissal) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/js/style.js"></script>
   </body>
